[workspace]
members = [ "src/satoshi_register",
    "src/satoshi_rust_backend"
, "src/satoshi_types"]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = "1"
serde_bytes = "0.11.14"
ic-ledger-types = "0.10.0"
hex = "0.4.3"
sha2 = "0.10.8"
