[package]
name = "satoshi_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-cdk-timers = {workspace = true} # Feel free to remove this dependency if you don't need timers
serde = {workspace = true}
serde_bytes = {workspace = true}
